syntax = "proto3";

package com.example.demo;

option java_multiple_files = true;
option java_package = "com.example.demo.grpc";

service PassengerService {
    rpc CreatePassenger(CreatePassengerRequest) returns (CreatePassengerResponse);
    rpc AuthenticatePassenger(AuthenticatePassengerRequest) returns (AuthenticatePassengerResponse);
    rpc LogoutPassenger(LogoutRequest) returns (LogoutResponse);
}

message CreatePassengerRequest {
    string name = 1;
    string phone = 2;
    string email = 3;
    string password = 4;
    string address = 5;
    int32 age = 6;
}

message CreatePassengerResponse {
    bool success = 1;
    string error_message = 2;
}

message AuthenticatePassengerRequest {
    string email = 1;
    string password = 2;
}

message AuthenticatePassengerResponse {
    bool success = 1;
    string error_message = 2;
}

message LogoutRequest {
    string email = 1;
}

message LogoutResponse {
    bool success = 1;
    string error_message = 2;
}
